<resources>
    <string name="app_name">E-Flight</string>
    <string name="toolbar_title_search_flights">Search Flights</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="btn_search_flight">Search Flight</string>
    <string name="multi">Multi</string>
    <string name="round_trip">Round-Trip</string>
    <string name="one_way">One-Way</string>
    <string name="no_of_passengers">No. of Passengers</string>
    <string name="return_date">return date</string>
    <string name="derparture_date">derparture date</string>
</resources>