<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="150dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">



           <androidx.cardview.widget.CardView
               android:id="@+id/cardView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardElevation="15dp"
               app:cardUseCompatPadding="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/constraintLayout"
                   android:layout_width="match_parent"
                   android:layout_height="480dp"
                   android:paddingHorizontal="10dp">


                   <RadioGroup
                       android:id="@+id/radio"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:padding="10dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintHorizontal_bias="0.0"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent">

                       <RadioButton
                           android:id="@+id/radio_oneway"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="5dp"
                           android:text="@string/one_way" />

                       <RadioButton
                           android:id="@+id/radio_roundtrip"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="5dp"
                           android:text="@string/round_trip" />

                       <RadioButton
                           android:id="@+id/radio_multi"
                           android:layout_width="95dp"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="5dp"
                           android:text="@string/multi" />
                   </RadioGroup>

                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/textInputLayout2"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/radio">

                       <androidx.appcompat.widget.AppCompatEditText
                           android:id="@+id/from_txt"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="@string/from" />
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/textInputLayout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                       <androidx.appcompat.widget.AppCompatEditText
                           android:id="@+id/to_txt"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="@string/to" />
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/textInputLayout3"
                       android:layout_width="140dp"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                       <androidx.appcompat.widget.AppCompatEditText
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="derparture date" />

                   </com.google.android.material.textfield.TextInputLayout>


                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/textInputLayout4"
                       android:layout_width="140dp"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                       <androidx.appcompat.widget.AppCompatEditText
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="return date" />
                   </com.google.android.material.textfield.TextInputLayout>


                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/textInputLayout5"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                       tools:layout_editor_absoluteX="10dp">

                       <androidx.appcompat.widget.AppCompatEditText
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="No. of Passengers" />
                   </com.google.android.material.textfield.TextInputLayout>

                   <Button
                       android:id="@+id/button"
                       android:layout_width="175dp"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="15dp"
                       android:background="@drawable/btn"
                       android:text="@string/btn_search_flight"
                       android:textColor="@color/colorPrimaryDark"
                       android:textSize="20sp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintHorizontal_bias="0.501"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>



       </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>




